# tide-cloud-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: tidb_cloud.json  tidb_cloud.toml
docs/: SQL_LIKE_SYNTAX.md  TIDB_ENDPOINTS_VIEW.md
examples/: basic-cluster.dsl  in_operator_examples.dsl  rpn_where_clause_examples.dsl  sql_dsl_demo.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  main.rs
src/dsl/: ast.rs  ast_dsl_transformer.rs  commands.rs  dsl_ast_parser.rs  error.rs  executor.rs  join_test.rs  mod.rs  parser.rs  sql_ast_parser.rs  sql_parser.rs  syntax.rs  unified_parser.rs
src/error/: mod.rs
src/logging/: mod.rs
src/schema/: mod.rs
src/sqlite/: mod.rs
src/sqlite/vtable/: api_bridge.rs  cursor.rs  mod.rs  table.rs
src/tidb_cloud/: client.rs  config.rs  constants.rs  debug_logger.rs  digest_auth.rs  error.rs  http_utils.rs  mod.rs  models.rs  operations.rs  query_utils.rs
tests/: order_by_integration_test.rs
