[package]
name = "tidb-cli"
version = "0.1.0"
edition = "2024"
description = "TiDB Cloud Command Line Interface"
license = "Apache-2.0"
authors = ["Sunny Bains<sunny.bains@pingcap.com>"]

[lib]
name = "tidb_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
md5 = "0.8"
hex = "0.4"
base64 = "0.22"
serde_urlencoded = "0.7"
url = "2.5"
edit = "0.1"
rustyline = "16.0"
colored = "3.0"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9.4"
regex = "1.0"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.0"

[[bin]]
name = "tidb-cli"
path = "src/main.rs"
